syntax = "proto3";
package types;

import "google/protobuf/timestamp.proto";

option go_package = "./types";

message Eth1Block {
    bytes hash = 1;
    bytes parent_hash = 2;
    bytes uncle_hash = 3;
    bytes coinbase = 4;
    bytes root = 5;
    bytes tx_hash = 6;
    bytes receipt_hash = 7;
    bytes difficulty = 8;
    uint64 number = 9;
    uint64 gas_limit = 10;
    uint64 gas_used = 11;
    google.protobuf.Timestamp time = 12;
    bytes extra = 13;
    bytes mix_digest = 14;
    bytes bloom = 17;
    bytes base_fee = 18;
    repeated Eth1Block uncles = 20;
    repeated Eth1Transaction transactions = 21;
}


message Eth1Transaction {
    uint32 type = 1;
    uint64 nonce = 2;
    bytes gas_price = 3;
    bytes max_priority_fee_per_gas = 4;
    bytes max_fee_per_gas = 5;
    uint64 gas = 6;
    bytes value = 7;
    bytes data = 8;
    bytes to = 12;
    bytes from = 13;

    bytes chain_id = 14;

    message AccessList {
        bytes address = 1;
        repeated bytes storage_keys = 2;
    }

    repeated AccessList access_list = 15;

    bytes hash = 16;

    // Receipt fields
    bytes contract_address = 17;
    uint64 commulative_gas_used = 18;
    uint64 gas_used = 19;
    bytes logs_bloom = 20;
    uint64 status = 21;
    string error_msg = 22;
    repeated Eth1Log logs = 23;

    // Internal transactions
    repeated Eth1InternalTransaction itx = 24;
}

message Eth1Log {
    bytes address = 1;
    bytes data = 2;
    bool removed = 3;
    repeated bytes topics = 4;
}

message Eth1InternalTransaction {
    string type = 1;
    bytes from = 2;
    bytes to = 3;
    bytes value = 4;
    string error_msg = 5;
    string path = 6;
}

message Eth1BlockIndexed {
    bytes hash = 1;
    bytes parent_hash = 2;
    bytes uncle_hash = 3;
    bytes coinbase = 4;
    bytes root = 5;
    bytes tx_hash = 6;
    bytes receipt_hash = 7;
    bytes difficulty = 8;
    uint64 number = 9;
    uint64 gas_limit = 10;
    uint64 gas_used = 11;
    google.protobuf.Timestamp time = 12;
    bytes extra = 13;
    bytes mix_digest = 14;
    bytes bloom = 17;
    bytes base_fee = 18;
    uint64 uncle_count = 19;
    uint64 transaction_count = 20;
    bytes mev = 21;
    bytes lowest_gas_price = 22;
    bytes highest_gas_price = 23;
    uint64 duration = 24;
    bytes tx_reward = 25;
    bytes uncle_reward = 26;
    bytes base_fee_change = 27;
    bytes block_utilization_change = 28;
}


